[tool.poetry]
name = "reschedule"
version = "0.1.3"
description = "Parser and scheduler for syncing a markdown(ish) todo list with google calendar."
authors = ["Luke Murray <lukepigeonmail@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lukesmurray/reschedule"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
exclude = ["assets/*"]


[tool.poetry.scripts]
reschedule = 'reschedule.cli:main'

[tool.poetry.dependencies]
python = "^3.6"
google-auth-oauthlib = "^0.4.1"
google-api-python-client = "^1.7.11"
python-dateutil = "^2.8.1"
typing-extensions = "^3.7.4"
tqdm = "^4.43.0"
typer = "^0.0.11"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pydocstyle = "^5.0.2"
mypy = "^0.770"
flake8 = "^3.7.9"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
